force-app/main/default/objects/Youth_Transition_Plan__c/Youth_Transition_Plan__c.object-meta.xml
<CustomObject>
    <label>Youth Transition Plan</label>
    <nameField>
        <displayFormat>YTP-{0000}</displayFormat>
        <label>Youth Transition Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Youth Transition Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>