force-app/main/default/objects/Youth_Transition_Plan__c/fields/About_D_O_R_S_Division_Rehabilitation__c.field-meta.xml
<CustomField>
    <fullName>About_D_O_R_S_Division_Rehabilitation__c</fullName>
    <inlineHelpText>About D.O.R.S (Division of Rehabilitation Services)?</inlineHelpText>
    <label>About D.O.R.S Division Rehabilitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>