force-app/main/default/objects/Youth_Transition_Plan__c/fields/About_Maryland_RISE_workforce_developmen__c.field-meta.xml
<CustomField>
    <fullName>About_Maryland_RISE_workforce_developmen__c</fullName>
    <inlineHelpText>About Maryland RISE workforce development program?</inlineHelpText>
    <label>About Maryland RISE workforce developmen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>