force-app/main/default/objects/Youth_Transition_Plan__c/fields/About_SILA__c.field-meta.xml
<CustomField>
    <fullName>About_SILA__c</fullName>
    <inlineHelpText>About SILA(Semi - independent living program)</inlineHelpText>
    <label>About SILA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>