force-app/main/default/objects/Youth_Transition_Plan__c/fields/About_the_Family_Reunification_Program__c.field-meta.xml
<CustomField>
    <fullName>About_the_Family_Reunification_Program__c</fullName>
    <inlineHelpText>About the Family Reunification Program(FUP)?</inlineHelpText>
    <label>About the Family Reunification Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>