force-app/main/default/objects/Youth_Transition_Plan__c/fields/About_your_High_School_Assessment__c.field-meta.xml
<CustomField>
    <fullName>About_your_High_School_Assessment__c</fullName>
    <inlineHelpText>About your High School Assessment?</inlineHelpText>
    <label>About your High School Assessment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>