force-app/main/default/objects/Youth_Transition_Plan__c/fields/All_your_housing_options__c.field-meta.xml
<CustomField>
    <fullName>All_your_housing_options__c</fullName>
    <inlineHelpText>All your housing options?</inlineHelpText>
    <label>All your housing options?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>