force-app/main/default/objects/Youth_Transition_Plan__c/fields/Are_you_currently_involved_in_community__c.field-meta.xml
<CustomField>
    <fullName>Are_you_currently_involved_in_community__c</fullName>
    <inlineHelpText>Are you currently involved in your community?</inlineHelpText>
    <label>Are you currently involved in community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>