force-app/main/default/objects/Youth_Transition_Plan__c/fields/Are_you_exploring_other_financial_resour__c.field-meta.xml
<CustomField>
    <fullName>Are_you_exploring_other_financial_resour__c</fullName>
    <inlineHelpText>Are you exploring other financial resources (e.g scholarships &amp; grants) to support your future educational and/or vocation programs?</inlineHelpText>
    <label>Are you exploring other financial resour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>