force-app/main/default/objects/Youth_Transition_Plan__c/fields/Are_you_familiar_education_training__c.field-meta.xml
<CustomField>
    <fullName>Are_you_familiar_education_training__c</fullName>
    <inlineHelpText>Are you familiar with the education training voucher?</inlineHelpText>
    <label>Are you familiar education training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>