force-app/main/default/objects/Youth_Transition_Plan__c/fields/Are_you_saving_money_to_support_yourself__c.field-meta.xml
<CustomField>
    <fullName>Are_you_saving_money_to_support_yourself__c</fullName>
    <inlineHelpText>Are you saving money to support yourself after you leave foster care?</inlineHelpText>
    <label>Are you saving money to support yourself</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>