force-app/main/default/objects/Youth_Transition_Plan__c/fields/Assessment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>