force-app/main/default/objects/Youth_Transition_Plan__c/fields/Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Name__c</fullName>
    <label>Assessment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>