force-app/main/default/objects/Youth_Transition_Plan__c/fields/Comments_Are_you_exploring_other_finan__c.field-meta.xml
<CustomField>
    <fullName>Comments_Are_you_exploring_other_finan__c</fullName>
    <inlineHelpText>Comments - Are you exploring other financial resources (e.g scholarships &amp; grants) to support your future educational and/or vocation programs?</inlineHelpText>
    <label>Comments - Are you exploring other finan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>