force-app/main/default/objects/Youth_Transition_Plan__c/fields/Comments_Are_you_familiar_education__c.field-meta.xml
<CustomField>
    <fullName>Comments_Are_you_familiar_education__c</fullName>
    <inlineHelpText>Comments - Are you familiar with the education training voucher?</inlineHelpText>
    <label>Comments - Are you familiar education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>