force-app/main/default/objects/Youth_Transition_Plan__c/fields/Comments_What_additional_document_does__c.field-meta.xml
<CustomField>
    <fullName>Comments_What_additional_document_does__c</fullName>
    <inlineHelpText>Comments - What additional documents does the youth need/want?</inlineHelpText>
    <label>Comments - What additional document does</label>
    <type>TextArea</type>
</CustomField>