force-app/main/default/objects/Youth_Transition_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>Contact.Service_Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>1;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Youth Transition Plans</relationshipLabel>
    <relationshipName>Youth_Transition_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>