force-app/main/default/objects/Youth_Transition_Plan__c/fields/Copies_of_this_transition_plan_have_been__c.field-meta.xml
<CustomField>
    <fullName>Copies_of_this_transition_plan_have_been__c</fullName>
    <inlineHelpText>Copies of this transition plan have been made for the following</inlineHelpText>
    <label>Copies of this transition plan have been</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Case File</fullName>
            </value>
            <value>
                <fullName>Independent Living Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>