force-app/main/default/objects/Youth_Transition_Plan__c/fields/Current_amount_saved__c.field-meta.xml
<CustomField>
    <fullName>Current_amount_saved__c</fullName>
    <inlineHelpText>Current amount saved</inlineHelpText>
    <label>Current amount saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>