force-app/main/default/objects/Youth_Transition_Plan__c/fields/Current_Education_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Education_Status__c</fullName>
    <inlineHelpText>Current Education Status :(In School ? Grade ? How are grades?  IEP ? Graduation Date ? GED ? Other programs ?</inlineHelpText>
    <label>Current Education Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>