force-app/main/default/objects/Youth_Transition_Plan__c/fields/Current_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment_Status__c</fullName>
    <inlineHelpText>Current Employment Status:(Job search?Skills needed ?  If employed,how do you maintain employment?If unemployed, how will you maintain employment?)</inlineHelpText>
    <label>Current Employment Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>