force-app/main/default/objects/Youth_Transition_Plan__c/fields/Current_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Health_Status__c</fullName>
    <inlineHelpText>Current Health Status</inlineHelpText>
    <label>Current Health Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>