force-app/main/default/objects/Youth_Transition_Plan__c/fields/Current_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Living_Situation__c</fullName>
    <inlineHelpText>Current Living Situation</inlineHelpText>
    <label>Current Living Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>