force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_About_D_O_R_S__c.field-meta.xml
<CustomField>
    <fullName>Description_About_D_O_R_S__c</fullName>
    <inlineHelpText>Description - About D.O.R.S (Division of Rehabilitation Services)?</inlineHelpText>
    <label>Description - About D.O.R.S</label>
    <type>TextArea</type>
</CustomField>