force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_About_Maryland_RISE__c.field-meta.xml
<CustomField>
    <fullName>Description_About_Maryland_RISE__c</fullName>
    <inlineHelpText>Description - About Maryland RISE workforce development program?</inlineHelpText>
    <label>Description - About Maryland RISE</label>
    <type>TextArea</type>
</CustomField>