force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_About_SILA__c.field-meta.xml
<CustomField>
    <fullName>Description_About_SILA__c</fullName>
    <inlineHelpText>Description - About SILA(Semi - independent living program)</inlineHelpText>
    <label>Description - About SILA</label>
    <type>TextArea</type>
</CustomField>