force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_About_the_career_assessmen__c.field-meta.xml
<CustomField>
    <fullName>Description_About_the_career_assessmen__c</fullName>
    <inlineHelpText>Description - About the career assessment at your school?</inlineHelpText>
    <label>Description - About the career assessmen</label>
    <type>TextArea</type>
</CustomField>