force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_About_the_Family__c.field-meta.xml
<CustomField>
    <fullName>Description_About_the_Family__c</fullName>
    <inlineHelpText>Description - About the Family Reunification Program(FUP)?</inlineHelpText>
    <label>Description - About the Family Reunifica</label>
    <type>TextArea</type>
</CustomField>