force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_About_your_High_School__c.field-meta.xml
<CustomField>
    <fullName>Description_About_your_High_School__c</fullName>
    <inlineHelpText>Description - About your High School Assessment?</inlineHelpText>
    <label>Description - About your High School</label>
    <type>TextArea</type>
</CustomField>