force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_All_your_housing_options__c.field-meta.xml
<CustomField>
    <fullName>Description_All_your_housing_options__c</fullName>
    <inlineHelpText>Description - All your housing options?</inlineHelpText>
    <label>Description - All your housing options?</label>
    <type>TextArea</type>
</CustomField>