force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Have_you_already_register__c.field-meta.xml
<CustomField>
    <fullName>Description_Have_you_already_register__c</fullName>
    <inlineHelpText>Description - Have you already registered?</inlineHelpText>
    <label>Description - Have you already register</label>
    <type>TextArea</type>
</CustomField>