force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Have_you_developed_a_caree__c.field-meta.xml
<CustomField>
    <fullName>Description_Have_you_developed_a_caree__c</fullName>
    <inlineHelpText>Description - Have you developed a career development framework?Be sure to share this information with your worker</inlineHelpText>
    <label>Description - Have you developed a caree</label>
    <type>TextArea</type>
</CustomField>