force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_How_to_apply_for_section_8__c.field-meta.xml
<CustomField>
    <fullName>Description_How_to_apply_for_section_8__c</fullName>
    <inlineHelpText>Description - How to apply for section 8 housing?</inlineHelpText>
    <label>Description - How to apply for section 8</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>