force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_How_to_find_assistance__c.field-meta.xml
<CustomField>
    <fullName>Description_How_to_find_assistance__c</fullName>
    <inlineHelpText>Description - How to find assistance with applying for summer youth employment?</inlineHelpText>
    <label>Description - How to find assistance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>