force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_How_to_get_on_the_HUD_list__c.field-meta.xml
<CustomField>
    <fullName>Description_How_to_get_on_the_HUD_list__c</fullName>
    <inlineHelpText>Description - How to get on the HUD list?</inlineHelpText>
    <label>Description - How to get on the HUD list</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>