force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_How_to_secure_funding_for__c.field-meta.xml
<CustomField>
    <fullName>Description_How_to_secure_funding_for__c</fullName>
    <inlineHelpText>Description - How to secure funding for housing?</inlineHelpText>
    <label>Description - How to secure funding for</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>