force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_If_your_worker_is_aware__c.field-meta.xml
<CustomField>
    <fullName>Description_If_your_worker_is_aware__c</fullName>
    <inlineHelpText>Description - If your worker is aware of funding and resources for higher education (college and vocational)?</inlineHelpText>
    <label>Description - If your worker is aware</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>