force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Is_your_worker_aware__c.field-meta.xml
<CustomField>
    <fullName>Description_Is_your_worker_aware__c</fullName>
    <inlineHelpText>Description -Is your worker aware of what you need to graduate?</inlineHelpText>
    <label>Description -Is your worker aware</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>