force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Or_how_to_find_informatio__c.field-meta.xml
<CustomField>
    <fullName>Description_Or_how_to_find_informatio__c</fullName>
    <inlineHelpText>Description - Or, how to find information for low income housing in the area, if needed?</inlineHelpText>
    <label>Description - Or, how to find informatio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>