force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Regular_exams_and_annual__c.field-meta.xml
<CustomField>
    <fullName>Description_Regular_exams_and_annual__c</fullName>
    <inlineHelpText>Description - Regular exams and annual physicals are important to maintain good health</inlineHelpText>
    <label>Description - Regular exams and annual</label>
    <type>TextArea</type>
</CustomField>