force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_The_education_requirements__c.field-meta.xml
<CustomField>
    <fullName>Description_The_education_requirements__c</fullName>
    <inlineHelpText>Description - The education requirements needed to obtain a Drivers License?</inlineHelpText>
    <label>Description - The education requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>