force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_The_importance_of_having__c.field-meta.xml
<CustomField>
    <fullName>Description_The_importance_of_having__c</fullName>
    <inlineHelpText>Description - The importance of having a bank account (i.e. savings/checking) and budgeting?</inlineHelpText>
    <label>Description - The importance of having</label>
    <type>TextArea</type>
</CustomField>