force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_The_purpose_of_each__c.field-meta.xml
<CustomField>
    <fullName>Description_The_purpose_of_each__c</fullName>
    <inlineHelpText>Description - The purpose of each medication you&apos;ve been prescribed?</inlineHelpText>
    <label>Description - The purpose of each</label>
    <type>TextArea</type>
</CustomField>