force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_The_State_of_Maryland__c.field-meta.xml
<CustomField>
    <fullName>Description_The_State_of_Maryland__c</fullName>
    <inlineHelpText>Description - The State of Maryland has a benchmark policy that outlines all the information &amp; tools you should receive by age 14,15,16,17 and 18?(Ask your social worker for a copy of the Benchmark policy)</inlineHelpText>
    <label>Description - The State of Maryland</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>