force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_What_information_is_needed__c.field-meta.xml
<CustomField>
    <fullName>Description_What_information_is_needed__c</fullName>
    <inlineHelpText>Description - What information is needed for medical coverage after foster care?</inlineHelpText>
    <label>Description - What information is needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>