force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_What_s_needed_to_get__c.field-meta.xml
<CustomField>
    <fullName>Description_What_s_needed_to_get__c</fullName>
    <inlineHelpText>Description - What&apos;s needed to get housing(i.e. criminal background, teasing agreement)?</inlineHelpText>
    <label>Description - What&apos;s needed to get</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>