force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_When_you_need_to_take_SAT__c.field-meta.xml
<CustomField>
    <fullName>Description_When_you_need_to_take_SAT__c</fullName>
    <inlineHelpText>Description - When you need to take the SATs?</inlineHelpText>
    <label>Description - When you need to take SAT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>