force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Where_to_find_assistance__c.field-meta.xml
<CustomField>
    <fullName>Description_Where_to_find_assistance__c</fullName>
    <inlineHelpText>Description - Where to find assistance in applying for college and working through the admission process</inlineHelpText>
    <label>Description - Where to find assistance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>