force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Where_to_find_help__c.field-meta.xml
<CustomField>
    <fullName>Description_Where_to_find_help__c</fullName>
    <inlineHelpText>Description - Where to find help with interviewing skills,resume building, appropriate dressing, and proper behavior in the workspace?</inlineHelpText>
    <label>Description - Where to find help</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>