force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Whether_transportation_is_i__c.field-meta.xml
<CustomField>
    <fullName>Description_Whether_transportation_is_i__c</fullName>
    <inlineHelpText>Description -Whether transportation is in place to remain in your same school if you change placements?</inlineHelpText>
    <label>Description -Whether transportation is i</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>