force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Which_clinics_doctor__c.field-meta.xml
<CustomField>
    <fullName>Description_Which_clinics_doctor__c</fullName>
    <inlineHelpText>Description - Which clinics/doctor offices you can access with your insurance?</inlineHelpText>
    <label>Description - Which clinics/doctor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>