force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Why_credit_history_is_so__c.field-meta.xml
<CustomField>
    <fullName>Description_Why_credit_history_is_so__c</fullName>
    <inlineHelpText>Description - Why credit history is so important?</inlineHelpText>
    <label>Description - Why credit history is so</label>
    <type>TextArea</type>
</CustomField>