force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_You_must_inform_caseworker__c.field-meta.xml
<CustomField>
    <fullName>Description_You_must_inform_caseworker__c</fullName>
    <inlineHelpText>Description - You must inform your caseworker of any address changes to receive health coverage after care</inlineHelpText>
    <label>Description - You must inform caseworker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>