force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Your_credit_score__c.field-meta.xml
<CustomField>
    <fullName>Description_Your_credit_score__c</fullName>
    <inlineHelpText>Description - Your credit score?</inlineHelpText>
    <label>Description - Your credit score?</label>
    <type>TextArea</type>
</CustomField>