force-app/main/default/objects/Youth_Transition_Plan__c/fields/Description_Your_educational_requireme__c.field-meta.xml
<CustomField>
    <fullName>Description_Your_educational_requireme__c</fullName>
    <inlineHelpText>Description - Your educational requirements to graduate?</inlineHelpText>
    <label>Description - Your educational requireme</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>