force-app/main/default/objects/Youth_Transition_Plan__c/fields/Do_you_currently_have_a__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_have_a__c</fullName>
    <inlineHelpText>Do you currently have a</inlineHelpText>
    <label>Do you currently have a</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking Account</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>