force-app/main/default/objects/Youth_Transition_Plan__c/fields/Do_you_currently_keep_a_monthly_budget__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_keep_a_monthly_budget__c</fullName>
    <inlineHelpText>Do you currently keep a monthly budget of your expenses?</inlineHelpText>
    <label>Do you currently keep a monthly budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>