force-app/main/default/objects/Youth_Transition_Plan__c/fields/Do_you_have_a_spiritual_support_church__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_spiritual_support_church__c</fullName>
    <inlineHelpText>Do you have a spiritual support/church organization?(Name,Contact Information)</inlineHelpText>
    <label>Do you have a spiritual support/church</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>