force-app/main/default/objects/Youth_Transition_Plan__c/fields/Efforts_to_identify_additional_adult__c.field-meta.xml
<CustomField>
    <fullName>Efforts_to_identify_additional_adult__c</fullName>
    <inlineHelpText>Efforts to identify additional adult supports and mentors</inlineHelpText>
    <label>Efforts to identify additional adult</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>