force-app/main/default/objects/Youth_Transition_Plan__c/fields/Family_Member_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Sign_Date__c</fullName>
    <label>Family Member Sign Date</label>
    <type>Date</type>
</CustomField>