force-app/main/default/objects/Youth_Transition_Plan__c/fields/Family_Member_Signature__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Signature__c</fullName>
    <label>Family Member Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>