force-app/main/default/objects/Youth_Transition_Plan__c/fields/Future_Goals_or_Plans_for_Education__c.field-meta.xml
<CustomField>
    <fullName>Future_Goals_or_Plans_for_Education__c</fullName>
    <inlineHelpText>Future Goals or Plans for Education/Vocational Training : (Attend college?Type of program?Vocational Training?Military?)</inlineHelpText>
    <label>Future Goals or Plans for Education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>