force-app/main/default/objects/Youth_Transition_Plan__c/fields/Future_goals_or_plans_for_employment__c.field-meta.xml
<CustomField>
    <fullName>Future_goals_or_plans_for_employment__c</fullName>
    <inlineHelpText>Future goals or plans for employment/career : (What career field do you want to pursue? How will you gain the skills necessary for your career goals? Who can help you obtain experience in this career area?Any plans for job shadowing or internship?)</inlineHelpText>
    <label>Future goals or plans for employment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>