force-app/main/default/objects/Youth_Transition_Plan__c/fields/Future_Plans_Goals_for_Housing__c.field-meta.xml
<CustomField>
    <fullName>Future_Plans_Goals_for_Housing__c</fullName>
    <inlineHelpText>Future Plans/Goals for Housing</inlineHelpText>
    <label>Future Plans/Goals for Housing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>