force-app/main/default/objects/Youth_Transition_Plan__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <inlineHelpText>Goal $</inlineHelpText>
    <label>Goal $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>