force-app/main/default/objects/Youth_Transition_Plan__c/fields/Goals_to_obtain_or_maintain_good_health__c.field-meta.xml
<CustomField>
    <fullName>Goals_to_obtain_or_maintain_good_health__c</fullName>
    <inlineHelpText>Goals to obtain or maintain good health</inlineHelpText>
    <label>Goals to obtain or maintain good health</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>