force-app/main/default/objects/Youth_Transition_Plan__c/fields/Has_the_youth_received_the_following_doc__c.field-meta.xml
<CustomField>
    <fullName>Has_the_youth_received_the_following_doc__c</fullName>
    <inlineHelpText>Has the youth received the following documents?</inlineHelpText>
    <label>Has the youth received the following doc</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foster Care Verification Letter</fullName>
            </value>
            <value>
                <fullName>Education Records</fullName>
            </value>
            <value>
                <fullName>Social Security Card</fullName>
            </value>
            <value>
                <fullName>Maryland State Photo identification or Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Medical/Health Insurance Card</fullName>
            </value>
            <value>
                <fullName>Instructions on how to request official replacement documents</fullName>
            </value>
            <value>
                <fullName>Green card(if applicable)</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>