force-app/main/default/objects/Youth_Transition_Plan__c/fields/Have_you_already_registered__c.field-meta.xml
<CustomField>
    <fullName>Have_you_already_registered__c</fullName>
    <inlineHelpText>Have you already registered?</inlineHelpText>
    <label>Have you already registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>