force-app/main/default/objects/Youth_Transition_Plan__c/fields/Have_you_developed_a_career_development__c.field-meta.xml
<CustomField>
    <fullName>Have_you_developed_a_career_development__c</fullName>
    <inlineHelpText>Have you developed a career development framework?Be sure to share this information with your worker</inlineHelpText>
    <label>Have you developed a career development</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>