force-app/main/default/objects/Youth_Transition_Plan__c/fields/Have_you_received_a_free_copy__c.field-meta.xml
<CustomField>
    <fullName>Have_you_received_a_free_copy__c</fullName>
    <inlineHelpText>Have you received a free copy of your annual credit reports from the 3 credit reporting agencies?</inlineHelpText>
    <label>Have you received a free copy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>